Editor (#29)
* fix: unique tests

* feat: notes api

* feat: text editor made

* docs: editor component documentation

* docs: openapi documentation  update

* docs: fived documentation

* fix: added go embed directory

* feat: compiled svelte compontents

* chore(release): 0.7.0
